--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ body{
     
     gap: 150px;
   justify-content: center;
- 
-  flex-wrap: wrap;
+  position: fixed;
+  left: 500px;
   display: flex;
 }
 nav ul{
@@ -59,9 +59,7 @@ nav ul a:hover {
     justify-content: center; 
     align-items: center;
 font-size: larger;
-padding: 50px;
-width: 100%;
-margin: 0 auto;
+padding: 200px;
 
 }
     
@@ -70,9 +68,7 @@ margin: 0 auto;
         flex-direction: column;
         color: #f8f3f3;
         font-size: larger;
-        max-width: 400px;
-        width: 100%;
-        margin: 0 auto;
+        width: 50%;
        
     }
         
@@ -114,12 +110,12 @@ margin: 0 auto;
         background-color: #cb9216;
         color: #292727;
         font-size: large;
-        padding: 12px;
-        margin-top: 30px auto 0 auto;
+        padding: 10px;
+        margin-top: 30px;
         width: 90%;
         justify-content: center;
+        margin-left: 36px;
         cursor: pointer;
-        display: block;
     }
 
 .home{
@@ -181,17 +177,18 @@ height: 80px;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-        
-      padding: 50px;
+        margin: 0;
+      padding: 10px;
       gap: 20px;
-      font-size: 16px;
-     
+      font-size: 1rem;
+      flex-wrap: wrap;
+      
     }
 
     .login-container{
-       width: 130%;
-        margin-left: -60px ;
-        padding: 70px;
+       width: 100%;
+        margin-left: 0 auto;
+        padding: 20px;
  }
 
  .login-container [type= submit]{
@@ -199,6 +196,7 @@ height: 80px;
  }
 
 }
+
 
 
 
