--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
 
  header{
         
+    height: 110px;
         align-items: flex-start;
         justify-content: flex-end;
         padding: 10px;
@@ -38,10 +39,10 @@ body{
     margin: 10px;
     padding: 25px;
     
-    gap: 150px;
+    gap: 180px;
   justify-content: center;
   position: fixed;
-  left: 500px;
+  left: 450px;
   display: flex;
 }
 nav ul{
@@ -59,7 +60,7 @@ nav ul a:hover {
     justify-content: center; 
     align-items: center;
 font-size: larger;
-padding: 200px;
+padding: 100px;
 
 }
     
@@ -128,77 +129,90 @@ padding: 200px;
     font-weight: 100;
 }
 
-@media screen and (max-width: 1024px){
 
-header{
-    height: 120px;
+@media screen and (max-width: 1024px) {
+  nav ul {
+    position: static;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 60px;
+    font-size: 26px;
+    margin: 0;
+    padding: 15px;
+    margin-right: 150px;
+  }
 
+  header img {
+    width: 160px;
+  }
+
+  .login-container {
+    flex-direction: column;
+    padding: 80px 40px;
+  }
+
+  .login-container form {
+    width: 80%;
+  }
 }
 
 
-header img{
- width: 190px;
+@media screen and (max-width: 768px) {
+  header {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+  }
 
+  header img {
+    position: static;
+    width: 140px;
+    margin-bottom: 10px;
+  }
+
+  nav ul {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    font-size: 22px;
+    position: static;
+    margin: 0;
+    padding: 10px 0;
+  }
+
+  .login-container {
+    padding: 60px 20px;
+  }
+
+  .login-container form {
+    width: 100%;
+    font-size: medium;
+  }
+
+  .login-container [type="submit"] {
+    margin-left: 0;
+    width: 100%;
+  }
 }
 
 
-nav ul {
-        font-size: xx-large;
-        align-items: center;
-        justify-content: space-between;
-        gap: 80px;
-        margin-left: -280px;
-    }
+@media screen and (max-width: 480px) {
+  nav ul {
+    font-size: 18px;
+    gap: 15px;
+  }
+
+  .login-container {
+    padding: 40px 10px;
+  }
+
+  .login-container form {
+    width: 100%;
+  }
+
+  .login-container input {
+    font-size: small;
+  }
+}
   
-    .login-container{
-        width: 180%;
-        margin-left: -390px;
-        padding: 300px;
-
-        
-    }
-    
-.login-container [type= submit]{
-    margin-left: 30px;
-}
-
-}
-
-@media screen and (max-width: 768px){
-
-    header{
-height: 80px;
-    }
-    header img{
-        width: 100px;
-    }
-     
-    nav ul{
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-        margin: 0;
-      padding: 10px;
-      gap: 20px;
-      font-size: 1rem;
-      flex-wrap: wrap;
-      
-    }
-
-    .login-container{
-       width: 100%;
-        margin-left: 0 auto;
-        padding: 20px;
- }
-
- .login-container [type= submit]{
-    margin-left: 18px;
- }
-
-}
-
-
-
-
-
-
